k8s/manifests/apps/network-system/static-routes/unifi/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi
  namespace: network-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: ${CLUSTER_CERT}
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    external-dns/is-public: "false"
    hajimari.io/enable: "true"
    hajimari.io/icon: "router-wireless"
    hajimari.io/appName: "unifi"

spec:
  tls:
    - secretName: tls.unifi
      hosts:
        - "unifi.${EXTERNAL_DOMAIN}"

  rules:
    - host: unifi.${EXTERNAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unifi
                port:
                  name: https
